base模块准备、编写简单CRUD、postman测试、异常处理

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>social_common</module>
+        <module>social_base</module>
     </modules>
 
     <parent>
