SpringDataJPA分页查询、招聘模块代码生成

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>social_common</module>
         <module>social_base</module>
+        <module>social_recruit</module>
     </modules>
 
     <parent>
