问答模块、文章模块代码生成

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>social_common</module>
         <module>social_base</module>
         <module>social_recruit</module>
+        <module>social_article</module>
+        <module>social_qa</module>
     </modules>
 
     <parent>
